<resources>
    <string name="app_name">Довідник студентів</string>
    <string name="btn_text">Показати список</string>
    <string name="default_text">Список студентів</string>
    <string-array name="students_groups">
        <item>301</item>
        <item>302</item>
        <item>308</item>
        <item>309</item>
    </string-array>
    <string name="edu_level_txt">Рівень освіти</string>
    <string name="edu_level_bachelor_txt">Бакалавр</string>
    <string name="edu_level_master_txt">Магістр</string>

    <string name="additional_flg_txt">Додаткові відомості: </string>
    <string name="contract_flg_txt">Наявність контрактників</string>
    <string name="privilege_flg_txt">Наявність пільговиків</string>

    <string name="btn_send">Відправити повідомлення</string>
    <string name="grp_number_txt">Номер групи:</string>
    <string name="faculty_txt">Факультет:</string>
    <string name="btn_ok_txt">OK</string>
    <string name="btn_grp_detail_txt">Детальніше...</string>
</resources>